test/variable/duplicate_local.lox
{
  var a = "value"
  var a = "other" // error: already a variable with this name in this scope
}
